--- a/Mortage-LP/Mortage-LP.csproj
+++ b/Mortage-LP/Mortage-LP.csproj
@@ -36,7 +36,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Solver.Foundation" />
+    <Reference Include="Microsoft.Solver.Foundation">
+      <HintPath>.\Microsoft.Solver.Foundation.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
